[project]
name = "rp-to-strong"
version = "0.1.0"
description = "Extract workout data from RP Hypo app and convert to STRONG app import format"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
rp-to-strong-cli = { workspace = true }
rp-to-strong-pipeline = { workspace = true }
api-service = { workspace = true }
embeddings = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
